[project]
name = "booru-autoposter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "apscheduler>=3.11.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "toml>=0.10.2",
    "yarl>=1.20.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
